# rust-synth

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.claude/skills/dev/: SKILL.md
cli/: main.rs
docs/: audio-next.md  glicol-direction.md  prd.md  ui-redesign.md  ui-references.md
patches/: blade_runner.rsp  cathedral.rsp  dance_floor.rsp
src/: lib.rs  main.rs  patch.rs  persistence.rs  recording.rs
src/audio/: engine.rs  mod.rs  patch.rs  preset.rs  scope.rs  track.rs  vibe.rs  voices.rs
src/math/: genetic.rs  harmony.rs  life.rs  mod.rs  motif.rs  pulse.rs  rhythm.rs  rnd.rs  sigmoid.rs
src/tui/: app.rs  beats.rs  editor.rs  evolve.rs  formula.rs  life.rs  mod.rs  params.rs  pattern.rs  per_track.rs  theme.rs  tracks.rs  trajectory.rs  waveform.rs  waveshape.rs
